# StructureTools2

./: CMakeLists.txt  MANIFEST.in  package.xml  pyproject.toml  setup.py  teste.json
freecad/StructureTools/: material.py  section.py
freecad/StructureTools2/: .load_distributed.py.swp  .material.py.swp  .sizing.py.swp  beam.py  calc.py  init_gui.py  layer.py  load_distributed.py  load_nodal.py  material.py  newproject.py  ntc2018.py  project.py  size.py  sizing.py  surface.py  surface.py.old
freecad/StructureTools2/resources/icons/: size.xpm
freecad/StructureTools2/standard/eurocode/: constant.py
freecad/StructureTools2/standard/italy/: .ntc2018.py.swp  constant.BCK.py  constant.py  ntc2018.py
